feat: use compressed keys